# geopera-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
geopera_cli/: __init__.py  __main__.py  auth.py  client.py  config.py  tree.py
